features/DashboardAside/DashboardAside.module.scss
.navlink{
    transition: all .2s;
    padding:  0.5rem 1rem;
    border-radius: 0.5rem;
    min-width: 200px;

    >svg {
        vertical-align: middle;
    }
    span {
        line-height: 20px;
    }
    :hover{
        @apply text-greenQ
    }

    &:hover > svg {
        @apply text-greenQ
    }
}
.navLinkActive{
    @apply shadow-md shadow-greenQ;
    @apply text-greenQ;

    > svg {
        @apply text-greenQ
    }
}

